# aws-robomaker-sample-application-deepracer

./: .env.default  .gitignore  .gitmodules  .travis.yml  Makefile  README.md  Vagrantfile  roboMakerSettings.json  test.py
scripts/: build.sh  bundle.sh  deeprotor  deeprotor-common.sh  deeprotor-guest.sh  deeprotor-host.sh  deeprotor-paths.sh  first_build.sh  set_env.sh  setup_dependencies.sh  setup_ros.sh
simulation_ws/: src
simulation_ws/src/: .gitignore
simulation_ws/src/deepracer_interpreter/: CMakeLists.txt  package.xml
simulation_ws/src/deepracer_interpreter/src/: racecar_plugin.hh
simulation_ws/src/deepracer_msgs/: package.xml
simulation_ws/src/deepracer_simulation/launch/: distributed_training.launch  evaluation.launch
simulation_ws/src/deepracer_simulation/urdf/: racecar.xacro
simulation_ws/src/deepracer_simulation/worlds/: medium_track.world
simulation_ws/src/deeprotor_interpreter/: package.xml
simulation_ws/src/deeprotor_interpreter/src/: racecar_plugin.cc
simulation_ws/src/deeprotor_msgs/: CMakeLists.txt  package.xml
simulation_ws/src/deeprotor_simulation/: CMakeLists.txt  package.xml
simulation_ws/src/deeprotor_simulation/launch/: distributed_training.launch  drone.launch  local_training.launch  racecar.launch  (+2 more)
workspace/src/deeprotor_model/: setup.py
workspace/src/deeprotor_simulation/: CMakeLists.txt  package.xml
workspace/src/deeprotor_simulation/launch/: evaluation.launch
workspace/src/deeprotor_simulation/urdf/: drone.gazebo  drone.xacro
workspace/src/deeprotor_simulation/worlds/: static_red_square_target.world
(+19 files in other folders)
